# typhoid-immune-dynamics

./: .gitignore  404.html  CLAUDE.md  README.md  cohort_incidence_model_scratch.R  docs_helper_functions.R  index.html  mkdocs.yml  pyproject.toml  requirements.txt  typhoid-immune-dynamics.Rproj
.github/workflows/: create_pr.yml
R/: functions.R
about/: index.html
blog/: index.html
data/: .gitignore  typhoid_vaccine_efficacy.xlsx  typhoid_vaccine_study_data.xlsx  ~$typhoid_vaccine_study_data.xlsx
docs/: .nav.yml  about.md  docs_helper_functions.R  index.md
docs/blog/: .authors.yml  index.md
docs/docs/: overview.md
docs/overview/: index.html
docs/stylesheets/: extra.css
metastudies/anti_Vi_metrology_ladder/: README.md  anti_Vi_metrology_ladder_contract.md  onboarding_one_pager.md
metastudies/dose_response_model/: README.md  dose_response_extraction_contract.md  onboarding_one_pager.md  progress_checklist.md
notebooks/: prototype.qmd
scratch/: .gitignore  VE_vs_titer_and_dose_model_prototype.R  cohort_incidence_model_high_dose_explore_scratch.R  cohort_incidence_model_proof_of_concept.R  cohort_incidence_model_proof_of_concept_flat.R  cohort_incidence_model_ve_study_scratch.R  cohort_incidence_model_ve_study_sketch.R  cohort_model_mathematical_description.md  empirical_bayes_random_effects_via_optimization.R  explore_efficacy_and_immunogenicity_data.R  explore_titer_censoring.R  leaky_protection_VE_theory.R  monotonic_dose_response.R  nlmixr2_exploration.R  titer_model_fit_scratch.R  typhoid_VE_scratch.R
search/: search_index.json
(+167 files in other folders)
